force-app/main/default/objects/Evenement__c/Evenement__c.object-meta.xml
<CustomObject>
    <description>Objet Fiche Evènement</description>
    <label>Evènement</label>
    <nameField>
        <label>Nom de l&#39;évènement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evènements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>