force-app/main/default/objects/Evenement__c/fields/Affiche__c.field-meta.xml
<CustomField>
    <fullName>Affiche__c</fullName>
    <label>Affiche</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>