force-app/main/default/objects/Evenement__c/fields/AssocieCient__c.field-meta.xml
<CustomField>
    <fullName>AssocieCient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Evènements</relationshipLabel>
    <relationshipName>Ev_nements</relationshipName>
    <type>Lookup</type>
</CustomField>