force-app/main/default/objects/Evenement__c/fields/AssocieCinema__c.field-meta.xml
<CustomField>
    <fullName>AssocieCinema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Evènements (Associé à un cinéma)</relationshipLabel>
    <relationshipName>Evenements</relationshipName>
    <type>Lookup</type>
</CustomField>