force-app/main/default/objects/Evenement__c/fields/AssocieFilm__c.field-meta.xml
<CustomField>
    <fullName>AssocieFilm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un film</label>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Evènements (Associé à un film)</relationshipLabel>
    <relationshipName>Evenements</relationshipName>
    <type>Lookup</type>
</CustomField>