force-app/main/default/objects/Evenement__c/fields/AssocieProduit__c.field-meta.xml
<CustomField>
    <fullName>AssocieProduit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Evènements</relationshipLabel>
    <relationshipName>Ev_nements</relationshipName>
    <type>Lookup</type>
</CustomField>