force-app/main/default/objects/Evenement__c/fields/DateDebut__c.field-meta.xml
<CustomField>
    <fullName>DateDebut__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>