force-app/main/default/objects/Evenement__c/fields/DateFin__c.field-meta.xml
<CustomField>
    <fullName>DateFin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>